// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeBlock Parsing should cope with multiple items 1`] = `
"<pre><code class='language-js'>const a = 1</code></pre>
<p>some people are funny</p>
"
`;

exports[`CodeBlock Parsing should parse indent codeblock 1`] = `
"<p>This is a normal paragraph:</p>
<pre><code>This is a code block.
</code></pre>
<p>Here is an example of AppleScript:</p>
<pre><code>tell application &quot;Foo&quot;
beep
end tell
</code></pre>
<p>A code block continues until it reaches a line that is not indented (or the end of the article).</p>
"
`;

exports[`CodeBlock Parsing should parse multiple consequetive codeblocks 1`] = `
"<pre><code class='language-js'>const a = 1</code></pre>
<pre><code class='language-js'>const b = 2</code></pre>
"
`;

exports[`CodeBlock Parsing should parse the codeblock 1`] = `
"<pre><code class='language-js'>const a = 1</code></pre>
"
`;

exports[`CodeBlock Parsing should parse the codeblock with multiple lines 1`] = `
"<pre><code class='language-js'>const a = 1
const b = 2</code></pre>
"
`;

exports[`CodeBlock Parsing should parse the codeblock with multiple lines and a newline 1`] = `
"<pre><code class='language-js'>const a = 1
const b = 2

const c = 3</code></pre>
"
`;

exports[`CodeBlock Parsing should parse the codeblock without the language 1`] = `
"<pre><code>const a = 1</code></pre>
"
`;
